Migrate tests to JUnit5