@@ -3,10 +3,12 @@ package io.jenkins.plugins.pipeline;
 import hudson.plugins.git.GitSCM;
 import java.io.File;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 import jenkins.plugins.git.GitSCMSource;
 import jenkins.plugins.git.GitSampleRepoRule;
+import jenkins.plugins.git.traits.BranchDiscoveryTrait;
+import jenkins.scm.impl.trait.WildcardSCMHeadFilterTrait;
 import org.apache.commons.io.FileUtils;
 import org.jenkinsci.plugins.workflow.job.WorkflowJob;
 import org.jenkinsci.plugins.workflow.job.WorkflowRun;
@@ -60,12 +62,13 @@ public class PipelineAsYamlScmFlowDefinitionTest {
         this.libraryCodeRepo.git("add", "vars/customSteps.groovy");
         this.libraryCodeRepo.git("commit", "--all", "--message=InitRepoWithStep");
 
-        LibraryConfiguration sharedLibraryConfiguration = new LibraryConfiguration(
-                "customSharedLibrary",
-                new SCMSourceRetriever(new GitSCMSource(null, this.libraryCodeRepo.toString(), "", "*", "", false)));
+        GitSCMSource source = new GitSCMSource(this.libraryCodeRepo.toString());
+        source.setTraits(List.of(new BranchDiscoveryTrait(), new WildcardSCMHeadFilterTrait("*", "")));
+        LibraryConfiguration sharedLibraryConfiguration =
+                new LibraryConfiguration("customSharedLibrary", new SCMSourceRetriever(source));
 
         GlobalLibraries globalLibraries = GlobalLibraries.get();
-        globalLibraries.setLibraries(Arrays.asList(sharedLibraryConfiguration));
+        globalLibraries.setLibraries(List.of(sharedLibraryConfiguration));
 
         String yamlJenkinsFileContent = FileUtils.readFileToString(
                 new File("src/test/resources/job/pipelineTestWithLibrary.yml"), StandardCharsets.UTF_8);
